--- a/www/src/admin/templates/customer/customer.html
+++ b/www/src/admin/templates/customer/customer.html
@@ -9,11 +9,9 @@
                         <h1 class="page-title">Customer Management</h1>
                         <p class="page-subtitle">Track and manage customer information</p>
                     </div>
-                    <div class="col-auto">
-                        <a href="" target="_parent" class="btn btn-primary">
-                            <i class="fas fa-plus me-1"></i> Add Customer
-                        </a>
-                    </div>
+                    <div class="col-auto">       
+                        <button onclick="window.location.href='/admin/customer/add'">Add Customer</button>
+                    </div> 
                 </div>
             </div>
 
@@ -44,7 +42,7 @@
                                     <span class="badge-count">-</span>
                                 </td>
                                 <td class="actions-cell">
-                                    <a href="#" target="_parent"     class="action-btn edit-btn" title="Edit">
+                                    <a href="#" target="main-content" class="action-btn edit-btn" title="Edit">
                                         <i class="fas fa-edit"></i>
                                     </a>
                                     <button class="action-btn delete-btn" data-bs-toggle="modal" data-bs-target="#deleteConfirmModal" 
