--- a/www/src/admin/templates/patch/edit_patch.html
+++ b/www/src/admin/templates/patch/edit_patch.html
@@ -1,5 +1,3 @@
-{% include 'link.html' %}
-<link rel="stylesheet" href="{{ url_for('static', filename='admin/css/patches/edit_patches.css') }}" />
 <div class="row">
     <!-- Main Content -->
     <div class="col-12 content-area p-0" style="flex-grow: 1; transition: width 0.3s ease-in-out; overflow: hidden;">
@@ -8,8 +6,8 @@
                 <div>
                     <h1>Edit Patch</h1>
                     <p>Update patch information</p>
-                </div>
-                <a href="/admin?route=/db-patch" target="_parent" class="btn btn-outline-secondary back-btn"><i class="fas fa-arrow-left"></i> Back to Patches</a>
+                </div>      
+                <button onclick="window.location.href='/admin/db-patch'" class="btn btn-outline-secondary back-btn" > Back to Patches </button>
             </div>
 
             <!-- Hiển thị thông báo lỗi nếu có -->
@@ -138,7 +136,7 @@
 
                             <div class="form-actions mt-4">
                                 <div class="text-end">
-                                    <a href="/admin?route=/db-patch" target="_parent"class="btn btn-outline-secondary me-2">Cancel</a>
+                                    <button onclick="window.location.href='/admin/db-patch'" class="btn btn-outline-secondary me-2" >Cancel</button>
                                     <button type="submit" class="btn btn-primary"><i class="fas fa-save me-1"></i> Save Changes</button>
                                 </div>
                             </div>
