--- a/www/src/base/templates/base.html
+++ b/www/src/base/templates/base.html
@@ -4,85 +4,98 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{% block title %} ORAPY {% endblock %}</title>		
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/component.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
+		<title>{% block title %} ORAPY {% endblock %}</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+		<link
+			rel="stylesheet"
+			href="{{ url_for('static', filename='css/component.css') }}" />
+		<link
+			rel="stylesheet"
+			href="{{ url_for('static', filename='css/sidebar.css') }}" />
 	</head>
 
 	<body>
 		<div class="d-flex flex-column" style="height: 100vh; overflow: hidden">
 			<!-- Header -->
-             <div class="bg-light border-bottom">
-                {% include 'header.html' %}
-             </div>
+			<div class="bg-light border-bottom">{% include 'header.html' %}</div>
 			<!-- Main Content Area -->
 			<div class="d-flex flex-grow-1" style="overflow: hidden">
 				<!-- Sidebar -->
 				<div class="bg-white border-end sidebar" id="sidebar">
-                    {% include 'macro.html' %}
+					{% include 'macro.html' %}
 				</div>
-                <!-- Main Content -->
-                <div class="flex-grow-1">
-                    {% block content %}
-                      <iframe id="app_container" src="{{ default_route }}" width="100%" height="100%" style="border: none;"></iframe>
-                    {% endblock %}
-                  </div>
+				<!-- Main Content -->
+				<div class="flex-grow-1">
+					{% block content %}
+					<iframe
+						id="app_container"
+						src="{{ default_route }}"
+						width="100%"
+						height="100%"
+						style="border: none"></iframe>
+					{% endblock %}
+				</div>
 			</div>
 		</div>
 
 		<!--  JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="{{ url_for('static', filename='js/sidebar_menu.js') }}"></script>
-		
-        <script>
-            
-            document.addEventListener('DOMContentLoaded', function() {
-                const current_path = window.location.pathname;
-                const iframe = document.getElementById('app_container');
-                if (current_path === '/' || current_path === '/admin'){
-                    sessionStorage.clear();
-                }
-                const defaultRoute = "{{ default_route | safe }}";
-                if (iframe){
-                    const savedRoute = sessionStorage.getItem('current_route');
-                    if (savedRoute) {
-                        iframe.src = savedRoute;
-                    } else {
-                        iframe.src = defaultRoute;
-                    }
-                }
 
-                document.querySelectorAll(".menu-link, .submenu-link").forEach(link => {
-                    link.addEventListener("click", function(e) {
-                        e.preventDefault();
-                        const route = this.getAttribute("data-route");
-                        const dataLink = this.getAttribute("data-link");
-                        var newRoute = `${route}`;
-                        if(dataLink){
-                            newRoute = `${route}?link=${encodeURIComponent(dataLink)}`;
-                        }
-                        if(!route) return;
-                        const iframeUrl = new URL(iframe.src);
-                        const currentPathWithQuery = iframeUrl.pathname + iframeUrl.search;
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				const current_path = window.location.pathname;
+				const iframe = document.getElementById("app_container");
+				if (current_path === "/" || current_path === "/admin") {
+					sessionStorage.clear();
+				}
+				const defaultRoute = "{{ default_route | safe }}";
+				if (iframe) {
+					const savedRoute = sessionStorage.getItem("current_route");
+					if (savedRoute) {
+						iframe.src = savedRoute;
+					} else {
+						iframe.src = defaultRoute;
+					}
+				}
 
-                        if (newRoute !== currentPathWithQuery) {
-                            iframe.src = newRoute;
-                            sessionStorage.setItem('current_route', newRoute);
-                        }
-                    });
-                });
+				document
+					.querySelectorAll(".menu-link, .submenu-link")
+					.forEach((link) => {
+						link.addEventListener("click", function (e) {
+							e.preventDefault();
+							const route = this.getAttribute("data-route");
+							const dataLink = this.getAttribute("data-link");
+							var newRoute = `${route}`;
+							if (dataLink) {
+								newRoute = `${route}?link=${encodeURIComponent(dataLink)}`;
+							}
+							if (!route) return;
+							const iframeUrl = new URL(iframe.src);
+							const currentPathWithQuery =
+								iframeUrl.pathname + iframeUrl.search;
 
-                iframe.addEventListener('load', function() {
-                    sessionStorage.setItem('current_route', iframe.src);
-                });
+							if (newRoute !== currentPathWithQuery) {
+								iframe.src = newRoute;
+								sessionStorage.setItem("current_route", newRoute);
+							}
+						});
+					});
 
-                iframe.addEventListener('error', function() {
-                    console.error('Error loading the iframe');
-                    iframe.src = '/error'; 
-                });
-            });
-        </script>
+				iframe.addEventListener("load", function () {
+					sessionStorage.setItem("current_route", iframe.src);
+				});
+
+				iframe.addEventListener("error", function () {
+					console.error("Error loading the iframe");
+					iframe.src = "/error";
+				});
+			});
+		</script>
 	</body>
 </html>
