--- a/www/src/admin/templates/awr_repo/awr_repo.html
+++ b/www/src/admin/templates/awr_repo/awr_repo.html
@@ -1,9 +1,6 @@
-<link
-	rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-<link
-	rel="stylesheet"
-	href="{{ url_for('static', filename='css/component.css') }}" />
+{% extends 'iframe_base.html' %}
+
+{% block content %}
 <div class="w-100">
     <div class="col-12 content-area p-0" style="flex-grow: 1; transition: width 0.3s ease-in-out; overflow: hidden;">
         <div class="container-fluid p-4">
@@ -30,8 +27,7 @@
                                 <th>CDB</th>
                                 <th>PDB DBID</th>
                                 <th>PDB Name</th>
-                                <th style="text-align: center;">End Snap</th>
-                                <th>End Time</th>
+
                             </tr>
                         </thead>
                         <tbody id="awr-tbody">
@@ -48,8 +44,6 @@
                                 </td>
                                 <td>{{ record.pdb_dbid }}</td>
                                 <td>{{ record.pdb_name }}</td>
-                                <td style="text-align: center;">{{ record.end_snap }}</td>
-                                <td>{{ record.end_time}}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -100,4 +94,4 @@
     </div>
 </div>
 
-
+{%endblock %}
