--- a/www/src/admin/templates/best_practice/best_practices.html
+++ b/www/src/admin/templates/best_practice/best_practices.html
@@ -1,3 +1,6 @@
+{% extends 'iframe_base.html' %}
+
+{% block content %}
 <div class="w-100">
     <div class="col-12 content-area p-0" style="flex-grow: 1; transition: width 0.3s ease-in-out; overflow: hidden;">
         <div class="container-fluid p-4">
@@ -9,7 +12,7 @@
                         <p class="page-subtitle">Track and manage database best practices efficiently</p>
                     </div>
                     <div class="col-auto">
-                        <button onclick="window.location.href='/admin/best-practice/add'" class="btn btn-outline-secondary back-btn" >Add Best Practice </button>
+                        <button onclick="window.location.href='/admin/best-practice/add'" class="btn btn-primary" >Add Best Practice </button>
                     </div>
                 </div>
             </div>
@@ -19,12 +22,12 @@
                 <table class="table custom-table" id="bestPracticeTable">
                     <thead>
                         <tr>
-                            <th class="id-col sortable" data-sort="id">ID <i class="fas fa-sort"></i></th>
-                            <th class="parameter-col sortable" data-sort="parameter">Parameter <i class="fas fa-sort"></i></th>
-                            <th class="value-col sortable" data-sort="default">Default Value <i class="fas fa-sort"></i></th>
-                            <th class="value-col sortable" data-sort="recommended">Recommended Value <i class="fas fa-sort"></i></th>
-                            <th class="version-col sortable" data-sort="version">DB Version <i class="fas fa-sort"></i></th>
-                            <th class="rac-col sortable" data-sort="rac">RAC Only <i class="fas fa-sort"></i></th>
+                            <th class="id-col " data-sort="id">ID </th>
+                            <th class="parameter-col " data-sort="parameter">Parameter </th>
+                            <th class="value-col " data-sort="default">Default Value </th>
+                            <th class="value-col " data-sort="recommended">Recommended Value </th>
+                            <th class="version-col " data-sort="version">DB Version </th>
+                            <th class="rac-col " data-sort="rac">RAC Only </th>
                             <th class="notes-col">Notes</th>
                             <th class="actions-col">Actions</th>
                         </tr>
@@ -67,3 +70,4 @@
     </div>
 </div>
 </div>
+{%endblock %}
