--- a/www/src/admin/templates/config/config.html
+++ b/www/src/admin/templates/config/config.html
@@ -1,7 +1,7 @@
+{% extends 'iframe_base.html' %}
 
-<link
-	rel="stylesheet"
-	href="{{ url_for('static', filename='css/component.css') }}" />
+{% block content %}
+
 <div class="w-100">
 	<div
 		class="col-12 content-area p-0"
@@ -57,3 +57,4 @@
 	</div>
 </div>
 
+{% endblock %}
