--- a/www/src/admin/templates/customer/add_customer.html
+++ b/www/src/admin/templates/customer/add_customer.html
@@ -1,8 +1,11 @@
 <!-- Main Content -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link
+	rel="stylesheet"
+	href="{{ url_for('static', filename='css/component.css') }}" />
 <div class="col-12 content-area p-0" style="flex-grow: 1; transition: width 0.3s ease-in-out; overflow: hidden;">
     <!-- Include Font Awesome for icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <div class="container">
         <div class="page-header d-flex justify-content-between align-items-center">
