--- a/www/src/admin/templates/customer/customer.html
+++ b/www/src/admin/templates/customer/customer.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='admin/css/customer/customer_management.css') }}">
+{% extends 'iframe_base.html' %}
+
+{% block content %}
 <div class="w-100">
     <div class="col-12 content-area p-0" style="flex-grow: 1; transition: width 0.3s ease-in-out; overflow: hidden;">
         <div class="container-fluid p-4">
@@ -10,7 +12,7 @@
                         <p class="page-subtitle">Track and manage customer information</p>
                     </div>
                     <div class="col-auto">       
-                        <button onclick="window.location.href='/admin/customer/add'">Add Customer</button>
+                        <button onclick="window.location.href='/admin/customer/add'" class="btn btn-primary">Add Customer</button>
                     </div> 
                 </div>
             </div>
@@ -21,8 +23,8 @@
                     <table class="table custom-table" id="customerTable">
                         <thead>
                             <tr>
-                                <th class="sortable" data-sort="code">Code <i class="fas fa-sort"></i></th>
-                                <th class="sortable" data-sort="name">Customer <i class="fas fa-sort"></i></th>
+                                <th class="sortable" data-sort="code">Code </th>
+                                <th class="sortable" data-sort="name">Customer </i></th>
                                 <th class="">Actions</th>
                             </tr>
                         </thead>
@@ -37,9 +39,6 @@
                                             <div class="customer-code">{{ customer.code }}</div>
                                         </div>
                                     </div>
-                                </td>
-                                <td>
-                                    <span class="badge-count">-</span>
                                 </td>
                                 <td class="actions-cell">
                                     <a href="#" target="main-content" class="action-btn edit-btn" title="Edit">
@@ -104,7 +103,7 @@
         </div>
     </div>
 </div>
-
+{%endblock %}
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
