--- a/www/src/static/css/component.css
+++ b/www/src/static/css/component.css
@@ -6,10 +6,10 @@
 }
 
 :root {
-	--primary-color: #D6EFD8;
-	--secondary-color: #80AF81;
-	--tertiary-color: #508D4E;
-	--quaternary-color: #1A5319;
+	--primary-color: #d6efd8;
+	--secondary-color: #80af81;
+	--tertiary-color: #508d4e;
+	--quaternary-color: #1a5319;
 	--success-color: #28a745;
 	--warning-color: #ffc107;
 	--danger-color: #dc3545;
@@ -27,7 +27,6 @@
 	--button-disabled-color: #fff;
 	--button-active-color: #73c088;
 	--button-focus-shadow-rgb: 49, 132, 253;
-	
 }
 
 body {
@@ -36,7 +35,9 @@ body {
 	background-color: var(--light-bg);
 	color: var(--dark-text);
 }
-
+code {
+	color: black;
+}
 /* Common styles for all pages */
 .page-title {
 	font-size: 1.75rem;
@@ -73,6 +74,7 @@ body {
 }
 
 .custom-table th {
+	text-align: left;
 	padding: 15px 10px;
 	border-bottom: 1px solid #e9ecef;
 	color: #ffffff;
@@ -82,6 +84,7 @@ body {
 }
 
 .custom-table td {
+	text-align: left;
 	padding: 12px 10px;
 	color: #495057;
 	font-size: 14px;
@@ -120,7 +123,7 @@ body {
 	--bs-btn-hover-bg: ##73c088;
 	--bs-btn-hover-border-color: #73c088;
 	--bs-btn-focus-shadow-rgb: 49, 132, 253;
-	--bs-btn-active-color: #73c088;
+	--bs-btn-active-color: #ffffff;
 	--bs-btn-active-bg: #73c088;
 	--bs-btn-active-border-color: #73c088;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
