--- a/www/src/apps/templates/chart_detail.html
+++ b/www/src/apps/templates/chart_detail.html
@@ -42,7 +42,7 @@
     }
 </style>
 
-<h1>Pie Chart</h1>
+<h1>test chart_detail</h1>
 {{ graph_html | safe }}
 <div class="container">
     <div class="custom-card">
@@ -93,6 +93,5 @@
 <div>
 </div>
 <footer class="mt-4 text-center text-muted" style="font-size: small;">
-    v1.0 - Designed with OSAS.
 </footer>
 </div>
