--- a/www/src/base/templates/header.html
+++ b/www/src/base/templates/header.html
@@ -11,7 +11,8 @@
         <button class="sidebar-toggle-btn" id="sidebarToggleBtn" onclick="toggleSidebar()">
             <i class="fas fa-bars"></i>
         </button>
-        
+
+
         <!-- Customer Dropdown -->
         <div class="dropdown me-5">
             <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="customerDropdown"
@@ -20,34 +21,34 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="customerDropdown">
                 {% if customers %}
-                    {% if customers|length >= 2 %}
-                        {% for customer in customers %}
-                        <li>
-                            <button class="dropdown-item customer-select-btn" type="button"
-                                data-cus-code="{{ customer.code }}" data-cus-name="{{ customer.name }}"
-                                value="{{ customer.code }}">
-                                {{ customer.name }}
-                            </button>
-                        </li>
-                        {% endfor %}
-                    {% else %}
-                        <li>
-                            <button class="dropdown-item customer-select-btn active" type="button"
-                                data-cus-code="{{ customers[0].code }}" data-cus-name="{{ customers[0].name }}"
-                                value="{{ customers[0].code }}">
-                                {{ customers[0].name }}
-                            </button>
-                        </li>
-                    {% endif %}
+                {% if customers|length >= 2 %}
+                {% for customer in customers %}
+                <li>
+                    <button class="dropdown-item customer-select-btn" type="button" data-cus-code="{{ customer.code }}"
+                        data-cus-name="{{ customer.name }}" value="{{ customer.code }}">
+                        {{ customer.name }}
+                    </button>
+                </li>
+                {% endfor %}
                 {% else %}
-                    <li>
-                        <button class="dropdown-item disabled" type="button">
-                            No customer select
-                        </button>
-                    </li>
+                <li>
+                    <button class="dropdown-item customer-select-btn active" type="button"
+                        data-cus-code="{{ customers[0].code }}" data-cus-name="{{ customers[0].name }}"
+                        value="{{ customers[0].code }}" onselect="{{ '/customer/' }}">
+                        {{ customers[0].name }}
+                    </button>
+                </li>
                 {% endif %}
-            </ul>        
+                {% else %}
+                <li>
+                    <button class="dropdown-item disabled" type="button">
+                        No customer select
+                    </button>
+                </li>
+                {% endif %}
+            </ul>
         </div>
+
 
         <!-- Database Dropdown -->
         <div class="dropdown" id="databaseDropdownContainer" style="display: none">
@@ -56,7 +57,7 @@
                 Select Database
             </button>
             <ul class="dropdown-menu" aria-labelledby="databaseDropdown">
-                {% if db_repo_info %} 
+                <!-- {% if db_repo_info %} 
                 {% for db in db_repo_info %}
                 <li>
                     <button class="dropdown-item database-select-btn" type="button" data-cus-code="{{ db.customer_code }}"
@@ -71,21 +72,21 @@
                         No databases available
                     </button>
                 </li>
-                {% endif %}
+                {% endif %} -->
             </ul>
         </div>
 
         <!-- User Profile Section -->
         <div class="header-actions d-flex justify-content-end align-items-center gap-3 flex-grow-1">
             <div class="user-dropdown position-relative">
-                <img src="{{ url_for('static', filename='images/avatar.svg') }}" class="rounded-circle avatar" 
+                <img src="{{ url_for('static', filename='images/avatar.svg') }}" class="rounded-circle avatar"
                     width="32" height="32" alt="User" onclick="toggleUserDropdown()" />
 
                 <div class="dropdown-menu-custom" id="userDropdown">
                     <div class="user-info py-3">
                         <div class="avatar-container mb-2 text-center">
-                            <img src="{{ url_for('static', filename='images/avatar.svg') }}" class="rounded-circle mb-2" 
-                            width="60" height="60" alt="{{ user.username }}" />
+                            <img src="{{ url_for('static', filename='images/avatar.svg') }}" class="rounded-circle mb-2"
+                                width="60" height="60" alt="{{ user.username }}" />
                         </div>
                         <div style="margin-left: 10px;">
                             <h6 class="mb-0">{{ user.username }}</h6>
@@ -97,13 +98,15 @@
                         <!-- <li><a href="/profile" class="text-decoration-none text-dark">
                             <i class="fa fa-user me-2"></i>Profile</a>
                         </li> -->
+                        {% if user.is_admin == 1 %}
                         <li><a href="/admin" class="text-dark text-decoration-none">
-                            <i class="fa fa-tasks me-2"></i>Admin Management</a>
+                                <i class="fa fa-tasks me-2"></i>Admin Management</a>
                         </li>
+                        {% endif%}
                     </ul>
                     <div class="px-3 py-2">
                         <a href="/logout"><button class="btn btn-outline-danger w-100"
-                            onclick="return confirm('Are you sure about that ?')">Logout</button></a>
+                                onclick="return confirm('Are you sure about that ?')">Logout</button></a>
                     </div>
                 </div>
             </div>
@@ -111,4 +114,83 @@
     </div>
 
     <script src="{{ url_for('static', filename='js/header.js') }}"></script>
+
+    <script>
+        let selectedDatabase = null;
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('.customer-select-btn').forEach(btn => {
+                btn.addEventListener('click', function () {
+                    const customerCode = this.getAttribute('data-cus-code');
+                    const requestData = {
+                        'customer_code': customerCode
+                    };
+                    fetch('/admin/awr-repo/get-awr-data', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(requestData)
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            updateAwrDatabaseDropdown(data, customerCode);
+                        })
+                        .catch(error => {
+                            console.error('Error while fetching awr info: ', error)
+                        });
+                });
+            });
+
+            ///update Awr Database Dropdown
+            function updateAwrDatabaseDropdown(databases, customerCode) {
+                const dropdownContainer = document.getElementById('databaseDropdownContainer');
+                const dropdownButton = document.querySelector('#databaseDropdown');
+                const dropdownMenu = document.querySelector('#databaseDropdownContainer .dropdown-menu');
+                ///show dropdown when has value
+                if (databases && databases.length > 0) {
+                    dropdownContainer.style.display = 'block';
+                    dropdownMenu.innerHTML = '';
+
+                    databases.forEach(dbData => {
+                        const db = dbData.database;
+                        const li = document.createElement('li');
+                        const btn = document.createElement('button');
+                        btn.className = 'dropdown-item database-select-btn';
+                        btn.type = 'button';
+                        btn.innerHTML = db.database_name
+
+                        btn.dataset.database = JSON.stringify(db);
+                        btn.addEventListener('click', function () {
+                            selectedDatabase = db;
+                            dropdownButton.textContent = `Selected: ${db.database_name}`;
+                            ///enable event selection_changed database
+                            document.dispatchEvent(new CustomEvent('databaseChanged', {
+                                detail: { database: db }
+                            }));
+                        });
+                        li.appendChild(btn);
+
+                        // li.innerHTML = `
+                        // <button class="dropdown-item database-select-btn" type="button" 
+                        //     data-cus-code="${customerCode}"
+                        //     data-db-name="${db.database.database_name}" 
+                        //     value="${db.database.dbid}">
+                        //     ${db.database.database_name}
+                        // </button>
+                        // `;
+                        dropdownMenu.appendChild(li);
+                    });
+                }
+                else {
+                    dropdownContainer.style.display = 'none';
+                }
+            }
+        });
+
+        ///get selected database
+        function getSelectedDatabase() {
+            return selectedDatabase;
+        }
+
+    </script>
 </nav>
