--- a/www/src/static/css/custom_charts.css
+++ b/www/src/static/css/custom_charts.css
@@ -9,7 +9,7 @@
     font-family: 'Roboto', Arial, sans-serif;
     margin: 20px 0;
     padding: 15px;
-    background: #fff;
+    background: #ff0000;
 }
 
 .chart-container:hover {
